styles.css
:root {
    --background-colour:rgb(26, 26, 26);
    --text-colour:white;
    --text-background:rgb(177, 177, 177);
}

body {
    background-color: var(--background-colour);
    color: var(--text-colour);
    margin: 0;
    overflow: hidden;/*allows the image of saturn (and all elements) to clip offscreen and not extend page size*/

    display: flex;
    justify-content: center;
}
.background-container{
    position: absolute;
    z-index: -100; /*puts it behind everything else*/
    width: 100%;
    height: 100%;
}
.background-image{
    position: absolute;
    z-index: inherit;
    width: 100%;
    height: 100%;
}
#background-border{
    position: absolute;
    z-index: -98; /*puts border in front of saturn*/
    left: -2%;
    top: -5%;
    width: 104%;
    height: 115%;
}
#background-citation{
    margin: 0;
    position: absolute;
    
    bottom: 10%;
    right: 10px;
}
#background-citation, #background-citation a{
    color: rgb(0, 0, 133);
    font-size: 10px;
}
#saturn-container{
    /*wierd stuff to make svg's work*/
    position: absolute;
    background: url(/media/saturn-dan-gerhards-01-clipart.svg) no-repeat center;
    z-index: -99; /*places saturn behind content and border but in front of background*/
    aspect-ratio: 1/1; /*makes width = height so i only have to change one value is js*/
    top: 0%;
    /*default value for game start
    can be changed in js to make it appear like its getting closer*/
    height: 10%;
}

#game-container {
    background-color: var(--text-background);
    width: 70%;
    margin-top: 10%;
}
#game-container h1{
    text-align: center;
    margin: 0;
}
#question-container{
    padding: 0px 16px;
}
#answers{
    padding: 16px 0px;
    margin: 0;

    display: flex;
    justify-content:space-around;
}
#answers .next-btn{
    flex: 0.3;
}

